--- a/produto-camisa-manga-comprida.html
+++ b/produto-camisa-manga-comprida.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Loja Virtual</title>
+  <title>Loja Virtual - Produto Camiseta manga comprida</title>
   <!--Favicons-->
   <link rel="apple-touch-icon" sizes="57x57" href="./assets/imagem/favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./assets/imagem/favicons/apple-icon-60x60.png">
@@ -153,127 +153,35 @@
 
   <!-- Main -->
   <main>
-    <!-- Promotion Banner  -->
-    <section id="bannerpromocionais" class="carousel slide container">
-
-      <!-- Imagens -->
-      <article class="carousel-inner">
-        <figure class="carousel-item active">
-          <img src="./assets/imagem/banner-1.jpg" class="d-block w-100" alt="Banner Promocional Lançamento Verão">
-        </figure>
-        <figure class="carousel-item">
-          <img src="./assets/imagem/banner-2.jpg" class="d-block w-100" alt="Banner Promocional vários Itens">
-        </figure>
-      </article>
-      <!-- End Imagens -->
-
-      <!-- Prev and Next -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#bannerpromocionais" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#bannerpromocionais" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-      <!-- End Prev and Next -->
-    </section>
-    <!-- End Promotion Banner  -->
-
-    <!-- Promotion Banner 6 columns  -->
-    <section class="container banner-promocionais-statico">
-
-      <!-- row -->
-      <section class="row">
-        <!-- Banners -->
-        <article class="col-md-6">
-          <div class="banner-promocionais-statico-12x d-flex align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-              class="bi bi-credit-card" viewBox="0 0 16 16">
-              <path
-                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z" />
-              <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z" />
-            </svg>
-            <p>
-              Parcele em até <br>
-              <strong>12x sem juros</strong>
-            </p>
-          </div>
-        </article>
-        <!-- Banners -->
-        <article class="col-md-6">
-          <div class="banner-promocionais-statico-todo-br d-flex align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-cart-fill"
-              viewBox="0 0 16 16">
-              <path
-                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-            </svg>
-            <p>
-              Entrega para <br>
-              <strong>todo Brasil</strong>
-            </p>
-          </div>
-        </article>
-        <!-- End Banners -->
-      </section>
-      <!-- End row -->
-    </section>
-    <!-- EndPromotion Banner 6 columns  -->
-
     <!-- Container Produtos -->
-    <section class="container produtos">
-      <!-- Title -->
-      <h1 class="text-center">Mais Populares</h1>
+    <section class="container">
 
-      <!-- Produtcts list -->
-      <article class="row">
+      <!-- breadcrumb -->
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="./">Home</a></li>
+          <li class="breadcrumb-item"><a href="./camisetas.html">Camisetas</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Camiseta manga comprida</li>
+        </ol>
+      </nav>
+      <!-- Produtos -->
+      <article class="row produtos-compras">
+        <!-- Imagem -->
+        <figure class="col-md-7">
+          <img src="./assets/imagem/foto-carrinho-camiseta-manga-comprida.jpg" class="img-fluid"
+            alt="Camiseta manga comprida">
+        </figure>
 
-        <!-- Products -->
-        <a href="#" class="produtos-container col-md-3">
-          <!-- Product Image -->
-          <img src="./assets/imagem/cropped-rosa.jpg" class="img-fluid" alt="Cropped rosa">
-
-          <!-- Product Itens -->
-          <article class="produtos-itens">
-            <!-- Product title -->
-            <h2>Cropped rosa</h2>
-
-            <!-- Product  stars -->
-            <div class="produtos-stars">
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
-            </div>
-
-            <!-- Product value -->
-            <trong>R$ 59,90</trong>
+        <!-- Dados do Produto -->
+        <section class="col-md-5 d-flex flex-column justify-content-around">
+          <article class="produtos-conteudo">
+            <h1>Camiseta manga comprida</h1>
+            <p>
+              Todos os meses disponibilizamos uma grande variedade de looks que são hits e queridinhos do momento
+              através de lançamentos exclusivos de moda Feminina.
+            </p>
           </article>
-        </a>
-        <!-- End Products -->
-
-        <!-- Products -->
-        <a href="#" class="produtos-container col-md-3">
-          <!-- Product Image -->
-          <img src="./assets/imagem/camiseta-manga-comprida.jpg" class="img-fluid" alt="Camiseta manga comprida">
-
-          <!-- Product Itens -->
-          <article class="produtos-itens">
-            <!-- Product title -->
-            <h2>Camiseta manga comprida</h2>
-
-            <!-- Product  stars -->
+          <article class="produtos-precos">
             <div class="produtos-stars">
               <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                 class="bi bi-star-fill" viewBox="0 0 16 16">
@@ -296,87 +204,35 @@
                   d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
               </svg>
             </div>
-
-            <!-- Product value -->
-            <trong>R$ 79,90</trong>
+            <strong>
+              R$ 79,90
+              <span class="d-block">
+                Em até 12x sem Juros
+              </span>
+            </strong>
           </article>
-        </a>
-        <!-- End Products -->
-
-        <!-- Products -->
-        <a href="#" class="produtos-container col-md-3">
-          <!-- Product Image -->
-          <img src="./assets/imagem/camiseta-listrada.jpg" class="img-fluid" alt="Camiseta listrada">
-
-          <!-- Product Itens -->
-          <article class="produtos-itens">
-            <!-- Product title -->
-            <h2>Camiseta listrada</h2>
-
-            <!-- Product  stars -->
-            <div class="produtos-stars">
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
+          <form action="#">
+            <div class="form-group">
+              <label for="produto-quantidade-itens">Quantidade</label>
+              <select class="form-select" id="produto-quantidade-itens">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>4</option>
+              </select>
             </div>
+            <button type="submit" class="btn btn-success col-md-12">Comprar</button>
+          </form>
+        </section>
+        <!-- End Dados do Produto -->
 
-            <!-- Product value -->
-            <trong>R$ 49,90</trong>
-          </article>
-        </a>
-        <!-- End Products -->
-
-        <!-- Products -->
-        <a href="#" class="produtos-container col-md-3">
-          <!-- Product Image -->
-          <img src="./assets/imagem/saia-plisada.jpg" class="img-fluid" alt="Saia plisada">
-
-          <!-- Product Itens -->
-          <article class="produtos-itens">
-            <!-- Product title -->
-            <h2>Saia plisada</h2>
-
-            <!-- Product  stars -->
-            <div class="produtos-stars">
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-              </svg>
-            </div>
-
-            <!-- Product value -->
-            <trong>R$ 117,90</trong>
-          </article>
-        </a>
-        <!-- End Products -->
+        <!-- Plugin Facebook -->
+        <div class="fb-comments col-md-12 mt-5 mb-5"
+          data-href="http://127.0.0.1:5500/Projetos/Hands-on-02/produto-camisa-manga-comprida.html" data-width="100%"
+          data-numposts="5"></div>
       </article>
-      <!-- End Produtcts list -->
-      <div class="d-flex justify-content-center">
-        <a href="./camisetas.html" class="btn btn-warning col-md-2">Veja mais</a>
-      </div>
+      <!--End Produtos -->
     </section>
     <!-- End Container Produtos -->
 
@@ -495,6 +351,10 @@
   <script src="./assets/js/bootstrap.bundle.min.js"></script>
   <script src="./assets/js/popper.min.js"></script>
 
+  <!--facebook plugins-->
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v16.0"
+    nonce="JUvGYJFv"></script>
 </body>
 
 </html>
